--- a/app/assets/scss/common.scss
+++ b/app/assets/scss/common.scss
@@ -1,6 +1,8 @@
+@import 'fonts';
 @import 'partials/margin-reset';
 @import 'partials/row+column';
 @import 'partials/section';
+@import 'definitions/typo';
 
 *,
 *::before,
