--- a/app/assets/scss/definitions/typo.scss
+++ b/app/assets/scss/definitions/typo.scss
@@ -1,8 +1,11 @@
+
 // headlines
 @mixin typo-display-default() {
 	margin: 0;
 	font-family: $font-family-heading;
-	font-weight: $font-weight-bold;
+	font-weight: $font-weight-extralight;
+	text-transform: uppercase;
+	letter-spacing: 1.3px;
 }
 
 // bodycopy
@@ -22,19 +25,41 @@
 	@if $typo == d1 {
 		font-size: rem(32);
 		line-height: em(44, 32);
+		font-family: "Julius Sans One", sans-serif;
 
 		@include breakpoint(sm up) {
 			font-size: rem(54);
 		}
 
 		@include breakpoint(lg up) {
-			font-size: rem(64);
+			font-size: rem(120);
 			line-height: em(86, 64);
 		}
 	}
 
 	@if $typo == d2 {
 		font-size: rem(32);
+		line-height: em(44, 32);
+
+		@include breakpoint(lg up) {
+			font-size: rem(64);
+			line-height: em(86, 64);
+		}
+
+		&::after {
+			content: "";
+			display: block;
+			width: 120px;
+			height: 2px;
+			background-color: #C7C880;
+			margin-top: 15px;
+			margin-left: 35px;
+		}
+	}
+
+	@if $typo == d3 {
+		font-size: rem(32);
+		font-weight: 200;
 		line-height: em(44, 32);
 	}
 
