--- a/app/assets/scss/common.scss
+++ b/app/assets/scss/common.scss
@@ -23,7 +23,7 @@ body {
 	margin: 0;
 	overflow-x: hidden;
 	font-family: $font-family-bodycopy;
-	font-weight: $font-weight-regular;
+	font-weight: $font-weight-light;
 	line-height: 1.25;
 	color: $color-black;
 	letter-spacing: 0;
