--- a/app/assets/scss/definitions/variables.scss
+++ b/app/assets/scss/definitions/variables.scss
@@ -13,7 +13,7 @@ $font-weight-light: 300;
 $font-weight-regular: 400;
 $font-weight-bold: 700;
 $font-weight-black: 900;
-$font-family-bodycopy: 'Courier Prime', arial, sans-serif;
+$font-family-bodycopy: 'Roboto', arial, sans-serif;
 $font-family-heading: 'Roboto', arial, sans-serif;
 $font-size-base: 16;
 
@@ -31,7 +31,7 @@ $vertical-rhythm-spacers: (
 
 // dimensions
 $width-row: rem(1200);
-$height-header: rem(80);
+$height-header: rem(75);
 
 // transitions
 $transition-duration-default: 0.3s;
